--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 NODE_ENV=development
 # Add this to your existing .env file
-DATABASE_URL=postgresql://postgres:SpmaTnfPxUIUAVYYxdXSchMfgoSXdkWs@ballast.proxy.rlwy.net:58731/railway
+DATABASE_URL=postgresql://postgres:mUFTfqhWLevVTwNesMmLOFXbTRubYSwD@mainline.proxy.rlwy.net:28418/railway
 
 # Add these to your existing .env file
 JWT_SECRET=your_super_secret_jwt_key_at_least_32_characters_long_12345
